# catalog-open-data

./: .geminiignore  .gitignore  AGENTS.md  CLAUDE.md  catalog-ideas.md  catalog.py  download.sh  opencode.json  process-analysis-prompt.md  pyproject.toml  requests-ratelimiter-plan.md  tools-proposal.md
data/: catalog.db
src/catalog_open_data/: __init__.py  main.py  schema.py
