[project]
name = "catalog-open-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "acatejr@gmail.com", email = "acatejr@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "requests-ratelimiter>=0.7.0",
    "rich>=14.2.0",
    "trafilatura>=2.0.0",
]

[project.scripts]
cod = "catalog_open_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
